sidebar and header

--- a/src/assets/styles/_vars.scss
+++ b/src/assets/styles/_vars.scss
@@ -2,7 +2,10 @@ $primary: #202020;
 $secondary: #121212;
 $white: #ffffff;
 
+$red:#ED3024;
+$blue: #3137C9;
+
 $z-index-sitebar: 1000;
 $z-index-header: 1000;
 
-$sidebar-width: 300px;
+$sidebar-width: 340px;
