--- a/src/assets/styles/blocks/_header.scss
+++ b/src/assets/styles/blocks/_header.scss
@@ -1,11 +1,122 @@
 .header {
-   height: 30px;
+   display: flex;
+   justify-content: space-between;
    width: calc(100% - $sidebar-width);
 
-   background-color: #ccc;
+   background-color: #0D0D0D;
+   box-shadow: 0px 5px 22px rgba(0, 0, 0, 0.25);
 
    position: fixed;
    top: 0;
    right: 0;
    z-index: $z-index-header;
+}
+
+.header__right {
+   width: 60%;
+}
+
+.nav {
+   &__list {
+      display: flex;
+   }
+   
+   &__item {
+      position: relative;
+
+      &:hover {
+         .nav__link {
+            background-color: $blue;
+         }
+
+         > .subnav {
+            display: block;
+         }
+      }
+   }
+
+   &__link {
+      padding: 1.5rem;
+      display: block;
+
+      color: $white;
+      font-size: 1.1rem;
+      text-transform: uppercase;
+      transition: background-color 0.2s linear;
+
+      &:hover {
+         background-color: $blue;
+      }
+
+      &--subnav {
+         position: relative;
+         padding-right: 3.7rem;
+
+         &::after {
+            content: '';
+            display: block;
+            position: absolute;
+            top: 50%;
+            right: 1.35rem;
+            transform: translateY(-50%);
+
+            border-style: solid;
+            border-width: 6px 5px 0 5px;
+            border-color: $white transparent transparent transparent;
+         }
+      }
+   } 
+}
+
+.subnav {
+   display: none;
+   width: 16.5rem;
+   background-color: $blue;
+   border-radius: 0 0 5px 5px;
+   box-shadow: 0px 6px 8px rgba(0, 0, 0, 0.2);
+
+   position: absolute;
+   top: 100%;
+   left: 0;
+
+   &__link {
+      color: $white;
+      font-size: 1.2rem;
+      display: block;
+      padding: 0.45rem 1.2rem;
+      transition: background-color 0.2s linear;
+      
+      &:hover {
+         background-color: darken($blue, 10%);
+      }
+   }
+}
+
+.header__left {
+   width: 40%;
+   display: flex;
+   justify-content: flex-end;
+   
+   .search {
+      background-color: $primary;
+      width: 100%;
+      max-width: 21rem;
+      display: flex;
+      align-items: center;
+      
+      &__input {
+         display: block;
+         width: 100%;
+         padding: 1.2rem 2rem;
+         background: transparent;
+         border: none;
+         font-family: inherit;
+         font-size: 1.2rem;
+         color: $white;
+         
+         &::placeholder {
+            color: rgba($white, 0.4);
+         }
+      }
+   }
 }
