--- a/src/assets/styles/blocks/_sidebar.scss
+++ b/src/assets/styles/blocks/_sidebar.scss
@@ -2,10 +2,75 @@
    width: $sidebar-width;
    height: 100vh;
 
-   background-color: #fff;
+   background-color: $primary;
+   box-shadow: 5px 0px 15px rgba(5, 5, 5, 0.1);
 
    position: fixed;
    top: 0;
    left: 0;
    z-index: $z-index-sitebar;
+}
+
+.sidebar__header {
+   height: 180px;
+   background-color: $secondary;
+
+   .sidebar__header-img {
+      display: block;
+      height: 100%;
+      width: 100%;
+      object-fit: cover;
+   }
+}
+
+.sidebar__content {
+   padding: 0 2rem;
+
+   .profile {
+      margin-top: -7rem;
+      
+      &__avatar {
+         display: block;
+         width: 15rem;
+         height: 15rem;
+         margin: 0 auto;
+      }
+
+      &__name {
+         font-size: 1.8rem;
+         text-align: center;
+      }
+
+      &__prof {
+         font-size: 1.4rem;
+         font-weight: 300;
+         text-align: center;
+         color: #DEDEDE;
+         margin-top: 3px;
+      }
+
+      &__description {
+         font-size: 1.2rem;
+         text-align: center;
+         padding: 3rem 0;
+         margin-top: 3rem;
+         border-top: 1px solid #1C1C1C;
+         border-bottom: 1px solid #1C1C1C;
+      }
+   }
+
+   .social {
+      display: flex;
+      justify-content: space-between;
+      width: 105px;
+      margin: 0 auto;
+      margin-top: 17px;
+   }
+}
+
+.sidebar__footer {
+   display: flex;
+   justify-content: space-between;
+   padding: 0 2.5rem;
+   margin-top: 30px;
 }
