--- a/src/components/header.html
+++ b/src/components/header.html
@@ -1,1 +1,47 @@
-<header class="header"></header>
+<header class="header">
+   <div class="header__right">
+      <nav class="nav">
+         <ul class="nav__list">
+            <li class="nav__item">
+               <a href="" class="nav__link">Главная</a>
+            </li>
+            <li class="nav__item">
+               <a href="" class="nav__link nav__link--subnav">Статьи</a>
+
+               <ul class="subnav">
+                  <li class="subnav__item">
+                     <a href="" class="subnav__link">Создание сайтов</a>
+                  </li>
+                  <li class="subnav__item">
+                     <a href="" class="subnav__link">Интернет-маркетинг</a>
+                  </li>
+                  <li class="subnav__item">
+                     <a href="" class="subnav__link">Продвижение видео</a>
+                  </li>
+               </ul>
+            </li>
+            <li class="nav__item">
+               <a href="" class="nav__link">Обо мне</a>
+            </li>
+            <li class="nav__item">
+               <a href="" class="nav__link">Реклама</a>
+            </li>
+         </ul>
+      </nav>
+   </div>
+   <!-- header__right -->
+
+   <div class="header__left">
+      <nav class="nav">
+         <ul class="nav__list">
+            <li class="nav__item">
+               <a href="" class="nav__link">Профиль</a>
+            </li>
+         </ul>
+      </nav>
+      <form action="/" method="post" class="search">
+         <input type="text" class="search__input" placeholder="Поиск по блогу">
+      </form>
+   </div>
+   <!-- header__left -->
+</header>
