--- a/src/components/aside.html
+++ b/src/components/aside.html
@@ -1,29 +1,29 @@
 <aside class="sidebar">
    <div class="sidebar__header">
-      <img src="../assets/images/sidebar/sidebar-header.jpg" alt="фон" class="sidebar__header-img">
+      <img src="assets/images/sidebar/sidebar-header.jpg" alt="фон" class="sidebar__header-img">
    </div>
    <!-- sidebar__header -->
 
    <div class="sidebar__content">
       <div class="profile">
-         <img src="../assets/images/sidebar/avatar.png" alt="avatar" class="profile__avatar">
+         <img src="assets/images/sidebar/avatar.png" alt="avatar" class="profile__avatar">
          <div class="profile__name">Дмитрий Валак</div>
          <div class="profile__prof">блог front-end разработчика</div>
 
          <ul class="social">
             <li class="social__item">
                <a href="" class="social__link">
-                  <img src="../assets/images/sidebar/social/instagram.svg" alt="instagram" class="social__link-icon">
+                  <img src="assets/images/sidebar/social/instagram.svg" alt="instagram" class="social__link-icon">
                </a>
             </li>
             <li class="social__item">
                <a href="" class="social__link">
-                  <img src="../assets/images/sidebar/social/vk.svg" alt="vk" class="social__link-icon">
+                  <img src="assets/images/sidebar/social/vk.svg" alt="vk" class="social__link-icon">
                </a>
             </li>
             <li class="social__item">
                <a href="" class="social__link">
-                  <img src="../assets/images/sidebar/social/pinterest.svg" alt="pinterest" class="social__link-icon">
+                  <img src="assets/images/sidebar/social/pinterest.svg" alt="pinterest" class="social__link-icon">
                </a>
             </li>
          </ul>
