--- a/src/assets/styles/blocks/_header.scss
+++ b/src/assets/styles/blocks/_header.scss
@@ -107,7 +107,7 @@
       &__input {
          display: block;
          width: 100%;
-         padding: 1.2rem 2rem;
+         padding: 1.5rem 2rem 1.2rem;
          background: transparent;
          border: none;
          font-family: inherit;
