--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -34,8 +34,10 @@ a {
 
 //assets
 @import "button";
+@import "embed";
 
 //blocks
 @import "blocks/header";
 @import "blocks/sidebar";
 @import "blocks/main";
+@import "blocks/main-article";
