--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -41,3 +41,8 @@ a {
 @import "blocks/sidebar";
 @import "blocks/main";
 @import "blocks/main-article";
+@import "blocks/main-pagenation";
+@import "blocks/main-article/related";
+@import "blocks/main-article/discus";
+@import "blocks/main-article/comments";
+
