--- a/src/components/main/posts.html
+++ b/src/components/main/posts.html
@@ -18,7 +18,7 @@
 <!-- post-1 -->
 
 <article class="post">
-   <div class="post__header">
+   <div class="post__header post__header--preview">
       <a href="">
          <img class="post__preview" src="assets/images/main/posts/image-post1.jpg"
             alt="Как писать код быстро и безболезненно?">
@@ -26,7 +26,7 @@
    </div>
    <div class="post__content">
       <h2 class="post__title">
-         <a class="post__title-link" href="">Как писать код быстро и безболезненно?</a>
+         <a class="post__title-link" href="post.html">Как писать код быстро и безболезненно?</a>
       </h2>
       <p class="post__text">
          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusamus quod odit optio vero cumque facilis esse
@@ -50,7 +50,7 @@
 <!-- post-2 -->
 
 <article class="post">
-   <div class="post__header post__header--video">
+   <div class="post__header">
       <div class="embed">
          <iframe src="https://www.youtube.com/embed/p4zbV1MBJNs?start=1666" title="YouTube video player" frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
@@ -59,7 +59,7 @@
    </div>
    <div class="post__content">
       <h2 class="post__title">
-         <a class="post__title-link" href="">Купил новый ноутбук за 150 000 руб</a>
+         <a class="post__title-link" href="post.html">Купил новый ноутбук за 150 000 руб</a>
       </h2>
    </div>
    <div class="post__footer">
@@ -77,7 +77,7 @@
 <!-- post-3 -->
 
 <article class="post">
-   <div class="post__header">
+   <div class="post__header post__header--preview">
       <a href="">
          <img class="post__preview" src="assets/images/main/posts/image-post2.jpg"
             alt="Как писать код быстро и безболезненно?">
@@ -85,7 +85,7 @@
    </div>
    <div class="post__content">
       <h2 class="post__title">
-         <a class="post__title-link" href="">Как я сходил на FrontEnd Conf 2021</a>
+         <a class="post__title-link" href="post.html">Как я сходил на FrontEnd Conf 2021</a>
       </h2>
       <p class="post__text">
          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusamus quod odit optio vero cumque facilis esse
