works and search

--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -45,4 +45,6 @@ a {
 @import "blocks/main-article/related";
 @import "blocks/main-article/discus";
 @import "blocks/main-article/comments";
+@import "blocks/main-article/page";
+@import "blocks/works.scss";
 
