--- a/src/components/header.html
+++ b/src/components/header.html
@@ -39,7 +39,7 @@
             </li>
          </ul>
       </nav>
-      <form action="/" method="post" class="search">
+      <form action="search.html" method="get" class="search">
          <input type="text" class="search__input" placeholder="Поиск по блогу">
       </form>
    </div>
