--- a/src/components/aside.html
+++ b/src/components/aside.html
@@ -38,7 +38,7 @@
    <!-- sidebar__content -->
 
    <div class="sidebar__footer">
-      <a href="" class="btn btn--red">Мои работы</a>
+      <a href="works.html" class="btn btn--red">Мои работы</a>
       <button class="btn btn--blue" type="button">Написать мне</button>
    </div>
    <!-- sidebar__footer -->
