profile, signup, signin

--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -46,5 +46,8 @@ a {
 @import "blocks/main-article/discus";
 @import "blocks/main-article/comments";
 @import "blocks/main-article/page";
-@import "blocks/works.scss";
+@import "blocks/main-article/form";
+@import "blocks/works";
+@import "blocks/cabinet";
+@import "blocks/main-article/signup";
 
