--- a/src/components/main/posts-post.html
+++ b/src/components/main/posts-post.html
@@ -79,11 +79,10 @@
 
    <div class="discus">
       <h3 class="discus__title">Обсуждение</h3>
-      <form action="/" method="post" class="comments__form">
-         <div class="discus__form-group">
-            <textarea class="discus__form-control discus__form-control--textarea"
-               placeholder="Текст комментария"></textarea>
-            <span class="discus__form-line"></span>
+      <form action="/" method="post" class="form">
+         <div class="form__group">
+            <textarea class="form__control form__control--textarea" placeholder="Текст комментария"></textarea>
+            <span class="form__line"></span>
          </div>
          <button class="btn btn--blue btn--bordrad" type="button">Отправить</button>
       </form>
