--- a/src/assets/styles/blocks/main-article/_page.scss
+++ b/src/assets/styles/blocks/main-article/_page.scss
@@ -5,5 +5,9 @@
       font-size: 2.1rem;
       color: $white;
       margin-bottom: 3rem;
+
+      &--center {
+         text-align: center;
+      }
    }
 }
