--- a/src/components/header.html
+++ b/src/components/header.html
@@ -35,7 +35,10 @@
       <nav class="nav">
          <ul class="nav__list">
             <li class="nav__item">
-               <a href="" class="nav__link">Профиль</a>
+               <a href="profile.html" class="nav__link">Профиль</a>
+            </li>
+            <li class="nav__item">
+               <a href="signup.html" class="nav__link">Вход</a>
             </li>
          </ul>
       </nav>
