--- a/src/components/header.html
+++ b/src/components/header.html
@@ -28,6 +28,10 @@
             </li>
          </ul>
       </nav>
+
+      <button class="burger">
+         <span></span>
+      </button>
    </div>
    <!-- header__right -->
 
