--- a/src/assets/styles/_vars.scss
+++ b/src/assets/styles/_vars.scss
@@ -7,5 +7,9 @@ $blue: #3137C9;
 
 $z-index-sitebar: 1000;
 $z-index-header: 1000;
+$z-index-modal: 1010;
 
 $sidebar-width: 340px;
+
+$tablet-bp: 991px;
+$mobile-bp: 575px;
