--- a/src/assets/styles/blocks/_main-pagenation.scss
+++ b/src/assets/styles/blocks/_main-pagenation.scss
@@ -3,6 +3,10 @@
    justify-content: center;
    margin: 8rem 0;
 
+   @include breakpoint($mobile-bp) {
+      margin: 5rem 0;
+   }
+
    &__item {
       display: flex;
       justify-content: center;
