--- a/src/assets/styles/blocks/_sidebar.scss
+++ b/src/assets/styles/blocks/_sidebar.scss
@@ -9,11 +9,27 @@
    top: 0;
    left: 0;
    z-index: $z-index-sitebar;
+
+   @include breakpoint($tablet-bp) {
+      transform: translateX(-100%);
+      transition: transform 0.2s linear;
+      top: 4rem;
+      height: calc(100% - 4rem);
+      overflow: auto;
+
+      .show-sidebar & {
+         transform: translateX(0);
+      }
+   }
 }
 
 .sidebar__header {
    height: 180px;
    background-color: $secondary;
+
+   @include breakpoint($tablet-bp) {
+      height: 10rem;
+   }
 
    .sidebar__header-img {
       display: block;
@@ -28,6 +44,11 @@
 
    .profile {
       margin-top: -7rem;
+
+      @include breakpoint($tablet-bp) {
+         margin-top: -2rem;
+         position: relative;
+      }
       
       &__avatar {
          display: block;
@@ -39,6 +60,11 @@
       &__name {
          font-size: 1.8rem;
          text-align: center;
+
+         @include breakpoint($tablet-bp) {
+            font-size: 1.4rem;
+            text-align: left;
+         }
       }
 
       &__prof {
@@ -47,6 +73,11 @@
          text-align: center;
          color: #DEDEDE;
          margin-top: 3px;
+
+         @include breakpoint($tablet-bp) {
+            font-size: 1rem;
+            text-align: left;
+         }
       }
 
       &__description {
@@ -56,15 +87,47 @@
          margin-top: 3rem;
          border-top: 1px solid #1C1C1C;
          border-bottom: 1px solid #1C1C1C;
+
+         @include breakpoint($tablet-bp) {
+            display: none;
+         }
       }
    }
 
-   .social {
-      display: flex;
-      justify-content: space-between;
-      width: 105px;
-      margin: 0 auto;
-      margin-top: 17px;
+   .profile__avatar {
+      @include breakpoint($tablet-bp) {
+         width: 6.5rem;
+         height: 6.5rem;
+         margin-left: 0;
+
+         position: absolute;
+         left: 0;
+      }
+   }
+
+   .profile__header {
+      margin-bottom: 2rem;
+
+      @include breakpoint($tablet-bp) {
+         text-align: left;
+         padding-left: 7rem;
+         padding-top: 2rem;
+         padding-bottom: 2rem;
+         border-bottom: 1px solid #514d4d;
+      }
+   }
+
+}
+
+.social {
+   display: flex;
+   justify-content: space-between;
+   width: 105px;
+   margin: 0 auto;
+   margin-top: 17px;
+
+   @include breakpoint($tablet-bp) {
+      display: none;
    }
 }
 
@@ -73,4 +136,9 @@
    justify-content: space-between;
    padding: 0 2.5rem;
    margin-top: 30px;
+
+   @media screen and (max-width: 350px) {
+         justify-content: start;
+         margin-left: -1rem; 
+   }
 }
