--- a/src/assets/styles/blocks/_works.scss
+++ b/src/assets/styles/blocks/_works.scss
@@ -5,10 +5,19 @@
    display: flex;
    margin-top: 3rem;
    margin-bottom: 3rem;
-   height: 60rem;
+   min-height: 60rem;
+
+   @include breakpoint($mobile-bp) {
+      flex-direction: column;
+   }
 
    &__preview {
       width: 31rem;
+
+      @include breakpoint($mobile-bp) {
+         width: 100%;
+         height: 20rem;
+      }
 
       img {
          width: 100%;
@@ -23,6 +32,11 @@
       padding: 2.5rem;
       display: flex;
       flex-direction: column;
+
+      @include breakpoint($mobile-bp) {
+         max-width: 100%;
+         padding: 1.5rem;
+      }
    }
 
    &__title {
@@ -31,15 +45,24 @@
          font-weight: 500;
          font-size: 2.4rem;
          line-height: 2.8rem;
+
+         @include breakpoint($mobile-bp) {
+            font-size: 2.1rem;
+         }
       }
    }
 
    &__description {
       font-size: 1.6rem;
-      line-height: 2.7rem;
+      line-height: 2.5rem;
       color: #D2D2D2;
       font-weight: 300;
       margin-bottom: 3rem;
+
+      @include breakpoint($mobile-bp) {
+         margin-bottom: 1rem;
+         font-size: 1.4rem;
+      }
    }
 
    &__list {
@@ -55,10 +78,19 @@
       border-radius: 3px;
       padding: 5px 10px;
       margin-right: 1rem;
+
+      @include breakpoint($mobile-bp) {
+         margin-top: 1rem;
+      }
    }
 
    &__footer {
       margin-top: auto;
       text-align: right;
+
+      @include breakpoint($mobile-bp) {
+         text-align: left;
+         margin-top: 2rem;
+      }
    }
 }
