--- a/src/assets/styles/blocks/main-article/_related.scss
+++ b/src/assets/styles/blocks/main-article/_related.scss
@@ -20,6 +20,10 @@
    &__item {
       width: 50%;
       margin-bottom: 2.5rem;
+
+      @include breakpoint($mobile-bp) {
+         width: 100%;
+      }
    }
 
    &__list-title {
