--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -1,5 +1,6 @@
 @import "normalize";
 @import "vars";
+@import "mixins";
 
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap');
 
@@ -18,6 +19,10 @@ body {
    font-weight: 400;
    font-family: 'Roboto', sans-serif;
 }
+
+// body.no-scroll {
+//    overflow: hidden;
+// }
 
 ul {
    margin: 0;
@@ -38,6 +43,7 @@ a {
 
 //blocks
 @import "blocks/header";
+@import "blocks/burger";
 @import "blocks/sidebar";
 @import "blocks/main";
 @import "blocks/main-article";
@@ -50,4 +56,7 @@ a {
 @import "blocks/works";
 @import "blocks/cabinet";
 @import "blocks/main-article/signup";
+
+//modal
+@import "modals/modal"
 
