--- a/src/components/aside.html
+++ b/src/components/aside.html
@@ -7,8 +7,10 @@
    <div class="sidebar__content">
       <div class="profile">
          <img src="assets/images/sidebar/avatar.png" alt="avatar" class="profile__avatar">
-         <div class="profile__name">Дмитрий Валак</div>
-         <div class="profile__prof">блог front-end разработчика</div>
+         <div class="profile__header">
+            <div class="profile__name">Дмитрий Валак</div>
+            <div class="profile__prof">блог front-end разработчика</div>
+         </div>
 
          <ul class="social">
             <li class="social__item">
@@ -35,6 +37,41 @@
          </div>
       </div>
    </div>
+
+   <nav class="nav nav--mobile">
+      <ul class="nav__list">
+         <li class="nav__item">
+            <a href="index.html" class="nav__link">Главная</a>
+         </li>
+         <li class="nav__item">
+            <a href="" class="nav__link nav__link--subnav">Статьи</a>
+
+            <ul class="subnav">
+               <li class="subnav__item">
+                  <a href="" class="subnav__link">Создание сайтов</a>
+               </li>
+               <li class="subnav__item">
+                  <a href="" class="subnav__link">Интернет-маркетинг</a>
+               </li>
+               <li class="subnav__item">
+                  <a href="" class="subnav__link">Продвижение видео</a>
+               </li>
+            </ul>
+         </li>
+         <li class="nav__item">
+            <a href="" class="nav__link">Обо мне</a>
+         </li>
+         <li class="nav__item">
+            <a href="" class="nav__link">Реклама</a>
+         </li>
+         <li class="nav__item">
+            <a href="profile.html" class="nav__link">Профиль</a>
+         </li>
+         <li class="nav__item">
+            <a href="signup.html" class="nav__link">Выйти</a>
+         </li>
+      </ul>
+   </nav>
    <!-- sidebar__content -->
 
    <div class="sidebar__footer">
