--- a/src/components/main/posts-post.html
+++ b/src/components/main/posts-post.html
@@ -7,7 +7,7 @@
    </div>
 
    <div class="post__header">
-      <h2 class="post__title post__title--mb0">
+      <h2 class="post__title post__title--mb-open">
          Как создавать сайты легко
       </h2>
       <ul class="post__data">
