--- a/src/components/header.html
+++ b/src/components/header.html
@@ -29,7 +29,7 @@
          </ul>
       </nav>
 
-      <button class="burger">
+      <button class="burger" id="sidebarToggle">
          <span></span>
       </button>
    </div>
