--- a/src/components/main/storis.html
+++ b/src/components/main/storis.html
@@ -1,20 +1,21 @@
 <div class="storis">
-   <div class="storis__item">
-      <img src="assets/images/main/storis/storis1.webp" alt="storis" class="storis__img storis__img--fix">
+   <div class="storis__item" data-modal="data-modal">
+      <img src="assets/images/main/storis/storis1.webp" alt="storis" class="storis__img storis__img--fix"
+         data-modal="data-modal">
       <div class="storis__title">Отдыхаю на <br> природе</div>
       <time class="storis__date" datetime="2020-09-21 19:21">21.09.2020</time>
    </div>
-   <div class="storis__item">
+   <div class="storis__item" data-modal="data-modal">
       <img src="assets/images/main/storis/storis2.webp" alt="storis" class="storis__img storis__img--fix">
       <div class="storis__title">Заканчиваю <br> сложный проект</div>
       <time class="storis__date" datetime="2020-09-15 19:21">15.09.2020</time>
    </div>
-   <div class="storis__item">
+   <div class="storis__item" data-modal="data-modal">
       <img src="assets/images/main/storis/storis3.webp" alt="storis" class="storis__img">
       <div class="storis__title">Переехал в новую <br> квартиру</div>
       <time class="storis__date" datetime="2020-09-11 19:21">11.09.2020</time>
    </div>
-   <div class="storis__item">
+   <div class="storis__item" data-modal="data-modal">
       <img src="assets/images/main/storis/storis4.webp" alt="storis" class="storis__img">
       <div class="storis__title">Осень пришла!</div>
       <time class="storis__date" datetime="2020-08-28 19:21">28.08.2020</time>
