--- a/src/components/modals/share-modal.html
+++ b/src/components/modals/share-modal.html
@@ -1,4 +1,4 @@
-<div class="modal">
+<div class="modal" id="share-modal">
    <div class="modal__contact">
       <button class="modal__close"><img src="assets/images/modal/cancel.svg" alt=""></button>
 
