--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -20,9 +20,10 @@ body {
    font-family: 'Roboto', sans-serif;
 }
 
-// body.no-scroll {
-//    overflow: hidden;
-// }
+body.no-scroll,
+body.show-sidebar {
+   overflow: hidden;
+}
 
 ul {
    margin: 0;
