--- a/src/components/aside.html
+++ b/src/components/aside.html
@@ -1,4 +1,4 @@
-<aside class="sidebar">
+<aside class="sidebar" id="sidebar">
    <div class="sidebar__header">
       <img src="assets/images/sidebar/sidebar-header.jpg" alt="фон" class="sidebar__header-img">
    </div>
@@ -76,7 +76,7 @@
 
    <div class="sidebar__footer">
       <a href="works.html" class="btn btn--red">Мои работы</a>
-      <button class="btn btn--blue" type="button">Написать мне</button>
+      <button class="btn btn--blue" type="button" data-modal="contact-modal">Написать мне</button>
    </div>
    <!-- sidebar__footer -->
 </aside>
