--- a/src/components/main/add-posts.html
+++ b/src/components/main/add-posts.html
@@ -1,6 +1,6 @@
 <div class="add-post">
    <form action="/" class="add-post__form" method="post">
-      <textarea name="post-text" class="add-post__textarea" placeholder="Напишите что-нибудь"></textarea>
+      <textarea name="post-text" class="add-post__textarea" placeholder="Напишите что-нибудь" data-autoresize></textarea>
       <div class="add-post__form-action">
          <label for="add-post-file" class="add-post__file">
             <input type="file" id="add-post-file" class="add-post__input">
