--- a/src/components/modals/story-modal.html
+++ b/src/components/modals/story-modal.html
@@ -1,3 +1,7 @@
-<div class="modal">
-   <video src="" class="modal__video"></video>
+<div class="modal" id="data-modal">
+   <div class="modal__contact modal__contact--story">
+      <video class="modal__video" controls>
+         <source src="../assets/images/video.mp4" type="video/mp4">
+      </video>
+   </div>
 </div>
